css/index.css
/* Variables */
:root {
  --color-white: #fafafa;
  --color-black: #1d1d1f;
  --color-yellow: #ffde59;
  --color-trans-yellow: rgba(255, 222, 89, 0.9);
  --angle: 45deg; /* initial arrow rotation angle */
  --offset: 5px; /* wiggle animation offset */
}

/* Main Section */
.first-section {
  height: calc(100svh - 4.6875rem);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 12rem 1rem 2rem 1rem;
  box-sizing: border-box;
}
#hero-section {
  background-color: transparent;
  display: grid;
  grid-template-columns: 800px 1fr 325px;
  grid-template-areas:
    ". . portfolio"
    "text filler portfolio"
    "description . .";
  grid-column-gap: 0;
  justify-content: space-between;
  padding-left: 4rem;
  padding-right: 4rem;
}
.hero-text {
  grid-area: text;
  display: inline-flex;
  flex-direction: column;
}
.hero-title {
  background-color: var(--color-trans-yellow);
  margin: 0;
  font-size: 6rem;
}
.hero-name {
  font-weight: 600;
  color: #fafafa;
  background-color: var(--color-trans-yellow);
}
.hero-desc {
  grid-area: description;
  margin: 0;
  font-size: 2rem;
}
.hero-portfolio-text {
  margin: 0px;
  font-style: normal;
  font-weight: 700;
  font-size: 6rem;
  line-height: 7rem;
  text-align: right;
}
.hero-portfolio {
  display: inline-flex;
  grid-area: portfolio;
  background-color: var(--color-trans-yellow);
  color: #ececec;
}
.empty-background {
  grid-area: filler;
  background-color: var(--color-trans-yellow);
}

/* Arrows */
.arrow-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
}

.arrow-down {
  border: solid var(--color-yellow);
  border-width: 0 0.375rem 0.375rem 0;
  padding: 1rem;
  rotate: var(--angle);
  transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
  margin-top: -1rem;
  animation: wiggle 0.5s ease-in-out infinite alternate;
}
/* Second Section */
.second-section {
  background: linear-gradient(180deg, #ececec 0%, #fafafa 12.5%);
}
/* Third Section */
.third-section {
  background: linear-gradient(180deg, #fafafa 0%, #ececec 12.5%);
}
/* Project Container */
.project-text-container {
  background: #ececec;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
}
.projects-text {
  padding: 0.9375rem 0.625rem;
  font-weight: 500;
  font-size: 4rem;
  color: #f1f1f1;
  background: #ffde59;
}
.project-container {
  max-height: 100%;
  display: flex;
}
.project-picture {
  width: 100%;
  max-width: 62.5rem;
  max-height: 62.5rem;
}
.project-img {
  width: 50%;
}
.project-text {
  display: flex;
  flex-direction: column;
  text-align: left;
  justify-content: center;
  box-sizing: border-box;
  gap: 20%;
  width: 50%;
}
.project-year {
  font-weight: 300;
  font-size: 2rem;
  margin: 0;
}
.project-title {
  margin: 0;
  padding: 0 0 0 0;
  font-weight: 500;
  font-size: 3.25rem;
}
.project-desc {
  margin: 0;
  margin-left: 1px;
  padding: 0.5rem 0 7rem 0;
  font-weight: 300;
  font-size: 2rem;
}
.view-project {
  margin: 0;
  padding: 0 0 0 0;
  font-weight: 500;
  font-size: 2rem;

  margin-left: 0.25rem;
  text-decoration: none;
  color: #1d1d1f;
}
.view-project:hover {
  border-bottom: solid #ffde59 0.25em;
}
.project-content {
  max-width: 75%;
}
/* Separation Line */
.separation-line {
  display: flex;
  justify-content: center;
  background-color: var(--color-white);
  height: 7px;
}
.line {
  height: 100%;
  width: 75%;
  background-color: var(--color-yellow);
}
/* Line colors */
.first-line {
  background-color: var(--color-white);
}
.second-line {
  background-color: #ececec;
}

/* General */
html {
  scroll-behavior: smooth;
  overflow-x: hidden;
  z-index: -1;
}
body {
  height: 100%;
  max-width: 100%;
  overflow-x: hidden;
  background: var(--color-white);
  color: #1d1d1f;
  font-family: Montserrat;
  margin: 0;
}
button {
  font-family: Montserrat;
}
section {
  position: relative;
  padding-bottom: 1rem;
}
.transparent {
  background: transparent;
}
.hero-background {
  position: absolute;
  width: 100%;
  height: 100%;
}

/* Hide scrollbar for Chrome, Safari and Opera */
body::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
body {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

/* Media */
@media (max-width: 900px) {
  /* First Section */
  .first-section {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 1rem 1rem 2rem 1rem;
    box-sizing: border-box;
  }
  #hero-section {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-areas:
      ". . portfolio"
      "text filler portfolio"
      "description . .";
    padding: 50% 0 0 0;
  }
  .hero-title {
    background-color: transparent;
  }
  .hero-desc {
    font-size: 1.25rem;
  }
  .hero-title {
    font-size: 4rem;
  }
  .arrow-down {
    padding: 0.5rem;
    margin-top: -0.5rem;
    border-width: 0 3px 3px 0;
  }
  .arrow-container {
    padding-bottom: 1rem;
  }
  .hero-background {
    display: none;
  }
  .empty-background,
  .hero-portfolio {
    display: none;
  }
  /* My Projects */
  .projects-text {
    margin: 0;
    font-size: 2rem;
  }
  .project-text-container {
    background: #fafafa;
  }
  /* Second Section */
  .second-section {
    background: linear-gradient(180deg, #fafafa 0%, #ececec 12.5%);
  }
  /* Third Section */
  .third-section {
    background: linear-gradient(180deg, #ececec 0%, #fafafa 12.5%);
  }
  /* Project Container */
  .project-container {
    flex-direction: column;
    padding-bottom: 1rem;
  }
  .project-img {
    width: 100%;
    height: 25%;
  }
  .project-text {
    padding: 0 0 0 1rem;
    width: 100%;
  }
  .project-year {
    font-size: 1rem;
    padding: 0 0 1rem 0;
  }
  .project-title {
    font-size: 1.5rem;
  }
  .project-desc {
    font-size: 1rem;
    padding: 0.375rem 0 2rem 0;
  }
  .view-project {
    font-size: 1rem;
  }
  /* Separation Line */

  /* First Line */
  .first-line {
    background-color: #ececec;
  }
  /* General */
  section {
    max-height: 100svh;
    min-height: 100%;
    position: relative;
  }
}
@media (prefers-reduced-motion) {
  .hidden {
    transition: none;
  }
}
/* Transitions */
.hidden-left {
  visibility: hidden;
  opacity: 0;
  filter: blur(5px);
  transform: translateX(-100%);
  transition: all 1.5s;
}
.hidden-right {
  visibility: hidden;
  opacity: 0;
  filter: blur(5px);
  transform: translateX(100%);
  transition: all 1.5s;
}
.show {
  visibility: visible;
  opacity: 1;
  filter: blur(0);
  transform: translateX(0);
}
/* Animations */
@keyframes wiggle {
  0% {
    transform: translate(0, 0);
  }
  100% {
    transform: translate(-5px, -5px);
  }
}

